# pytorch

./: setup.py
nezha/: local_demo.py  module_def.py
nezha_ops/: CMakeLists.txt  nezha_ops.cpp
test/onnx/: test_operators.py  test_pytorch_onnx_onnxruntime.py
tools/: build_variables.bzl
torch/_C/: __init__.pyi.in
torch/csrc/jit/passes/onnx/: nezha_helper.cpp  nezha_helper.h
torch/csrc/jit/python/: init.cpp
torch/onnx/: __init__.py  utils.py
